--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <p>First Name:</p> <input type="text" name="fname" id="fname" placeholder="Enter your first name" required autocapitalize="characters">
        </div>
        <div class="last">
-          <p>Last Name:</p> <input type="text" name="lname" id="lname" placeholder="Enter your last name" required>
+          <p>Last Name:</p> <input type="text" name="lname" id="lname" placeholder="Enter your last name" required autocapitalize="characters">
        </div>
      </div>
      <div class="section-two">
@@ -36,7 +36,7 @@
      </div>   
        <div class="address">
           <p>Address:</p>
-         <input type="text" name="address" id="address" placeholder="Enter your address">
+         <input type="address" name="address" id="address" placeholder="Enter your address">
        </div>
      <div class="city-pin">
        
